@@ -1,0 +1,3 @@
+*****...**
+******.***
+******.***
